# log-ingest-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.test.yaml
.github/workflows/: build.yml  build_and_test.yml  publish.yml
migrations/: 20221225200042_initial.sql
src/: config.rs  database.rs  main.rs  parameters.rs
src/api/: logs.rs  mod.rs
src/models/: log.rs  mod.rs
